--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.12.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
@@ -49,7 +50,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.12.1",
-    "eslint-plugin-babel": "^5.3.1"
+    "eslint": "7.12.1",
+    "eslint-plugin-babel": "5.3.1"
   }
 }
