--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app_inmo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/",
   "dependencies": {
     "@babel/eslint-plugin": "^7.14.5",
     "@testing-library/jest-dom": "^5.11.4",
